fixed video on mobile

--- a/source/styles/components.scss
+++ b/source/styles/components.scss
@@ -207,7 +207,7 @@
 }
 
 .parallax-bg {
-  transition: background-position 0.3s cubic-bezier(0.1, 0.73, 0.32, 0.89)
+  transition: background-position 0.3s cubic-bezier(0.1, 0.73, 0.32, 0.89);
 }
 
 .filter-nav {
